test/good/basic/indent01.px

if true do
	print true
else do
    print false
