test/bad/basic/bool03.px

if true, false do
    skip
elif 1, 2 do
    skip
